# partyapp

./: pyproject.toml  requirements.txt
docs/: CLI.md  MODEL.md  TUTORIAL.md
src/partyapp/: cli.py  config.py
src/partyapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/partyapp/db/: base.py
src/partyapp/db/models/: __init__.py  associations.py  category.py  enums.py  law.py  party.py
