[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "partyapp"
version = "0.1.0"
description = "Political party data collection system (MVP)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pa = "partyapp.cli:cli"